--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,7 +21,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/registerText"
+                android:id="@+id/addCarText"
                 style="@style/Text.TextView"
                 android:text="@string/register"
                 app:layout_constraintEnd_toEndOf="parent"
