--- a/app/src/main/res/layout/activity_car_details.xml
+++ b/app/src/main/res/layout/activity_car_details.xml
@@ -5,12 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.cardetails.CarDetailsActivity">
+    tools:context=".activity.main.CarDetailsActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".activity.cardetails.CarDetailsActivity">
+        tools:context=".activity.main.CarDetailsActivity">
 
         <TextView
             android:id="@+id/stateNumber"
