--- a/app/src/main/res/layout/activity_text_support.xml
+++ b/app/src/main/res/layout/activity_text_support.xml
@@ -1,44 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activity.TextSupportActivity">
 
     <TextView
         android:id="@+id/loginTextView"
         style="@style/Text.TextView"
         android:text="Сообщить об ошибке"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="40dp"/>
+
+    <EditText
+        android:id="@+id/bugReportTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="33dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginTop="20dp"
+        android:hint="Тема"
+        android:background="@drawable/edit_text_area" />
 
     <EditText
         android:id="@+id/bugReportField"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="413dp"
         android:layout_marginStart="33dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="33dp"
-        android:background="@null"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/edit_text_area"
         android:gravity="top|start"
+        android:hint="Пожалуйста, опишите найденную ошибку, по возможности укажите условия её возникновения."
         android:inputType="textMultiLine"
         android:lines="6"
         android:overScrollMode="always"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:scrollbarStyle="insideInset"
         android:scrollbars="vertical"
         android:scrollHorizontally="false"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp"
-        android:hint="Пожалуйста, сообщите о найденной ошибке"
-        app:layout_constraintBottom_toTopOf="@+id/bugReportButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
         android:id="@+id/bugReportButton"
@@ -52,4 +56,4 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
